[package]
name = "libsql-client"
version = "0.3.7"
edition = "2021"
license = "Apache-2.0"
description = "HTTP-based client for libSQL and sqld"
keywords = ["libsql", "sqld", "database", "driver", "http"]

[dependencies]
anyhow = "1"
base64 = "0.21.0"
bytes = { version = "1.2.1", features = ["serde"] }
http = "0.2"
num-traits = "0.2.15"
serde_json = "1.0.91"
spin-sdk = { git = "https://github.com/fermyon/spin" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }

[workspace]
